# patients

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-06-10-064023_create_users/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/handlers/: auth.rs  mod.rs  patients.rs
src/middleware/: auth.rs
src/routes/: mod.rs
src/utils/: auth.rs  db.rs  hash.rs  mod.rs
