[package]
name = "patients"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-service = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }

# Database
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy_macro = "0.15"

# Logging (optional but helpful)
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
argon2 = "0.4"
rand = "0.8"
